--- a/Uc6Fabio/Uc6Fabio/GamePage.xaml
+++ b/Uc6Fabio/Uc6Fabio/GamePage.xaml
@@ -5,8 +5,8 @@
     xmlns:local="using:Uc6Fabio"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Width="1277" >
 
-  <SwapChainPanel x:Name="swapChainPanel" />
+    <SwapChainPanel x:Name="swapChainPanel_Copy" Width="320" Margin="0,-10,960,10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="35" />
 
 </Page>
