Adding a background and delimitade ball border, switch player color, put placar in the correct location .next step is delimitade player border.

--- a/Uc6Fabio/Uc6Fabio/GamePage.xaml
+++ b/Uc6Fabio/Uc6Fabio/GamePage.xaml
@@ -5,8 +5,9 @@
     xmlns:local="using:Uc6Fabio"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" Width="1277" >
+    mc:Ignorable="d" Width="1280" Height="720" HorizontalAlignment="Stretch" >
 
-    <SwapChainPanel x:Name="swapChainPanel_Copy" Width="320" Margin="0,-10,960,10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="35" />
+    <SwapChainPanel x:Name="swapChainPanel" Width="1280" >
+    </SwapChainPanel>
 
 </Page>
